fixed alignment issue

--- a/css/main.css
+++ b/css/main.css
@@ -341,6 +341,7 @@ html{
     }
     .skill-div-container div{
         padding: 20px;
+        width: 100%;
     }
 
     .skill-div-container h4{
